fix "Permission Policy'

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="icon" type="image/x-icon" href="assets/vs.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="app.css">
     <title>Valorant Stats</title>
