--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="w3-third w3-padding-16">
                 <input type="button" id="get_stats" value="Get Stats" onclick="userAction()">
-                <div id="loading"></div>
+                <div id="loading"></div></input>
             </div>
         </div>
     </div>
@@ -73,13 +73,9 @@
 
     <div id="show" class="show">
         <div class="w3-row-padding">
-            <div class="w3-third w3-padding-16">
-                <h4 id="player_name"></h4>
-                <div id="player_card"></div>
+            
 
-            </div>
-
-            <div class="w3-third w3-padding-16">
+            <div class="w3-quarter w3-padding-16">
 
                 <table id="player_info"></table>
                 <br>
@@ -89,10 +85,19 @@
                 <h6 id="agent_name"></h6> -->
             </div>
 
-            <div class="w3-third w3-padding-16">
+            <div class="w3-quarter w3-padding-16">
 
                 <table id="stats">
                 </table>
+            </div>
+
+            <div class="w3-half w3-padding-16">
+                <!-- <h4 id="player_name"></h4>
+                <div id="player_card"></div> -->
+
+                <table id="scorecard">
+                </table>
+
             </div>
         </div>
     </div>
