--- a/index.html
+++ b/index.html
@@ -18,41 +18,19 @@
         <div class="w3-row-padding">
             <div class="w3-third w3-padding-16">
                 <div class="w3-row-padding">
-                    <div class="w3-half" hidden>
-                        <h5>
-                            Pick Player:
-                        </h5>
-                        <select id="player">
-                            <option value="1">AgentPP</option>
-                            <option value="2">Raz1a</option>
-                            <option value="3">Mandark</option>
-                            <option value="4">SniperLag</option>
-                            <option value="5">Darkknight1</option>
-                            <option value="6">Wolfstien20</option>
-                        </select>
-                    </div>
-                    <!-- <div class="w3-half w3-padding-16"> -->
                     <h5>
                         Search Player:
                     </h5>
-                    <div class="w3-row-padding">
-                        <input list="brow">
-                        <datalist id="brow">
-                            <option value="Internet Explorer">
-                            <option value="Firefox">
-                            <option value="Chrome">
-                            <option value="Opera">
-                            <option value="Safari">
-                        </datalist>
-                        <div class="w3-half">
-                            <input type="text" id="p_name" placeholder="Name">
-                        </div>
-                        <div class="w3-half">
-                            <input type="text" id="p_tag" placeholder="Tag#">
-                        </div>
-                    </div>
 
-                    <!-- </div> -->
+                    <input list="brow" type="text" id="p_nametag" placeholder="Name#Tag">
+                    <datalist id="brow">
+                        <option value="AgentPP#6969">
+                        <option value="Raz1a#7233">
+                        <option value="Mandark#1337">
+                        <option value="SniperLag#9424">
+                        <option value="Darkknight1#4637">
+                        <option value="Wolfstien20#2429">
+                    </datalist>
                 </div>
             </div>
 
@@ -103,7 +81,10 @@
                 <!-- <h4 id="player_name"></h4>
                 <div id="player_card"></div> -->
 
-                <table id="scorecard">
+                <table id="player_team">
+                </table>
+                <br>
+                <table id="enemy_team">
                 </table>
 
             </div>
